--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@
    ========================================================================== */
 
 $base-font                   	: Kai,Kaiti SC,KaiTi,DFKai-SB,BiauKai,\\6977\4F53,\\6977\4F53_GB2312,Songti SC,Georgia,Times,"Times New Roman",serif;
-$heading-font                	: FangSong,\\4EFF\5888\,\\4EFF\5888\_GB2312,sans-serif;
+$heading-font                	: YouYuan,\\5E7C\5706,幼圆,"Helvetica Neue","Segoe UI",Arial,sans-serif;
 $caption-font                	: $base-font;
 $code-font                   	: monospace;
 $alt-font                    	: $heading-font;
