--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -134,17 +134,17 @@
       position: absolute;
       left: 0;
       margin-bottom: 0;
-      width: 23%/*50px*/;
+      width: 50px;
       border: 1px solid $white;
       margin-bottom: ($gutter / 2);
       opacity: 0.6;
       @include media($small) {
-      
+        width: 150px;
       }
     }
     a:hover .teaser {
       opacity: 1;
-      border: 3px  #d19ed2;
+      border: 3px  solid $lemon;
     }
     .title {
       display: block;
